# claude2openai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
claude2openai/: __init__.py  setup.cfg
claude2openai/api_resources/: __init__.py  chat_completion.py
claude2openai/tests/: test_usage.py
