[metadata]
name = claude2openai
version = attr: claude2openai.version.VERSION
description = use claude like openai
long_description = file: README.md
long_description_content_type = text/markdown
author = ChuxiJ
author_email = junmingong@gmail.com
url = https://github.com/ChuxiJ/claude2openai
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  requests >= 2.20  # to get the patch for CVE-2018-18074
  slack-sdk  # Needed for progress bars
  typing_extensions; python_version<"3.8"  # Needed for type hints for mypy
  aiohttp  # Needed for async support
